Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       </header>
       <section>
         <h1>
-<a id="-curso-básico-de-hardware" class="anchor" href="#-curso-b%C3%A1sico-de-hardware" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<img src="hardware.png" alt="Hardware"> Curso Básico de Hardware</h1>
+<a id="curso-básico-de-hardware" class="anchor" href="#curso-b%C3%A1sico-de-hardware" aria-hidden="true"><span class="octicon octicon-link"></span></a>Curso Básico de Hardware</h1>
 
 <p>Material de Curso Básico de Hardware.</p>
 
